ajout du menu et finition emprunts et rendus

--- a/Bibliotheque/makefile
+++ b/Bibliotheque/makefile
@@ -1,5 +1,5 @@
 CFLAGS = -g -Wall -Wextra
-OBJ = biblio.o main.o listes.o dates.o
+OBJ = biblio.o main.o listes.o dates.o menu.o
 EXEC = run
 
 all: $(EXEC)
@@ -16,7 +16,10 @@ listes.o : listes.c listes.h biblio.h
 dates.o : dates.c dates.h biblio.h
 	gcc -o dates.o -c dates.c $(CFLAGS)
 
-main.o : main.c biblio.h listes.h dates.h
+menu.o : menu.c menu.h dates.h listes.h biblio.h
+	gcc -o menu.o -c menu.c $(CFLAGS)
+
+main.o : main.c biblio.h listes.h dates.h menu.h
 	gcc -o main.o -c main.c $(CFLAGS)
 
 clean : 
