--- a/Bibliotheque/makefile
+++ b/Bibliotheque/makefile
@@ -7,19 +7,19 @@ all: $(EXEC)
 run : $(OBJ)
 	gcc -o $(EXEC) $(OBJ)
 
-biblio.o : biblio.c biblio.h
-	gcc -o biblio.o -c biblio.c $(CFLAGS)
+biblio.o : Biblio/biblio.c Biblio/biblio.h
+	gcc -o biblio.o -c Biblio/biblio.c $(CFLAGS)
 
-listes.o : listes.c listes.h biblio.h
-	gcc -o listes.o -c listes.c $(CFLAGS)
+listes.o : Listes/listes.c Listes/listes.h Biblio/biblio.h
+	gcc -o listes.o -c Listes/listes.c $(CFLAGS)
 
-dates.o : dates.c dates.h biblio.h
-	gcc -o dates.o -c dates.c $(CFLAGS)
+dates.o : Dates/dates.c Dates/dates.h Biblio/biblio.h
+	gcc -o dates.o -c Dates/dates.c $(CFLAGS)
 
-menu.o : menu.c menu.h dates.h listes.h biblio.h
-	gcc -o menu.o -c menu.c $(CFLAGS)
+menu.o : Menu/menu.c Menu/menu.h Dates/dates.h Listes/listes.h Biblio/biblio.h
+	gcc -o menu.o -c Menu/menu.c $(CFLAGS)
 
-main.o : main.c biblio.h listes.h dates.h menu.h
+main.o : main.c Biblio/biblio.h Listes/listes.h Dates/dates.h Menu/menu.h
 	gcc -o main.o -c main.c $(CFLAGS)
 
 clean : 
