Réparation du merge
Correction des tests, etc...

--- a/PileFile/makefile
+++ b/PileFile/makefile
@@ -11,5 +11,8 @@ tests_pile : Pile/pile.c Pile/pile.h Pile/tests_pile.c
 tests_file : File/file.c File/file.h File/tests_file.c
 	gcc File/*.c -o File/tests $(CFLAGS)
 
+run : File/file.c File/file.h Pile/pile.c Pile/pile.h main.c
+	gcc Pile/pile.c File/file.c main.c -o run $(CFLAGS)
+
 mrproper:
-	rm */$(EXEC)
+	rm */$(EXEC) && rm run
