--- a/Arbre/makefile
+++ b/Arbre/makefile
@@ -1,20 +1,23 @@
 CFLAGS = -g -Wall -Wextra
-OBJ = arbre.o main.o
+OBJ = arbre.o pile.o main.o
 EXEC = run
 
-all:$(EXEC)
+all: $(EXEC)
 
-run:$(OBJ)
-	gcc -o run $(OBJ)
+run : $(OBJ)
+	        gcc -o $(EXEC) $(OBJ)
 
-arbre.o: arbre.c arbre.h
+arbre.o : arbre.c arbre.h type_arbre.h
 	gcc -o arbre.o -c arbre.c $(CFLAGS)
 
-main.o: main.c arbre.h
-	gcc -o main.o -c main.c $(CFLAGS)
+pile.o : pile.c pile.h type_arbre.h
+	gcc -o pile.o -c pile.c $(CFLAGS)
 
-clean:
-	rm -f $(OBJ)
+main.o : main.c arbre.h pile.h type_arbre.h
+	gcc -o main.o -c main.c $(CFLAGS)
+	
+clean :
+	        rm -f $(OBJ)
 
 mrproper: clean
-	rm -f $(EXEC)
+	        rm -f $(EXEC)
